test/src/e2e_vm_tests/test_programs/should_pass/test_contracts/contract_with_type_aliases/src/main.sw
contract;

type IdentityAlias = Identity;

struct IdentityAliasWrapper {
    i: IdentityAlias,
}

type IdentityAliasWrapperAlias = IdentityAliasWrapper;

struct Generic<T> {
    f: T,
}

abi MyContract {
    fn foo(x: AssetId, y: [IdentityAlias; 2], z: IdentityAliasWrapperAlias, w: Generic<IdentityAliasWrapperAlias>) -> AssetId;
}

impl MyContract for Contract {
    fn foo(
        x: AssetId,
        y: [IdentityAlias; 2],
        z: IdentityAliasWrapperAlias,
        w: Generic<IdentityAliasWrapperAlias>,
    ) -> AssetId {
        x
    }
}
