test/src/e2e_vm_tests/test_programs/should_fail/contract_implements_multiple_abis_with_same_methods/src/main.sw
contract;

abi A {
    fn foo() -> u64;
    fn foo2();
}

abi B {
    fn foo() -> u64;
    fn foo2();
}

impl A for Contract {
    fn foo() -> u64 {
        3
    }

    fn foo2() {}
}

impl B for Contract {
    fn foo() -> u64 {
        2
    }

    fn foo2() {}
}
